{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "PlayerMovementBase",
            "id": "47d2a098-8a75-4af0-9ede-13791b0de08e",
            "actions": [
                {
                    "name": "MoveDirection",
                    "type": "Value",
                    "id": "f3ab1007-4776-4274-897f-710e43aa676e",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "LookDirection",
                    "type": "Value",
                    "id": "057127b7-4ce1-4fa7-8753-33c9550cf63c",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "SwitchPlacingMode",
                    "type": "Button",
                    "id": "e94a9ced-c2a7-41df-b0e5-61da6caf3a30",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a90943ca-41d5-468d-b7b1-dbd6a02c251f",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "StickDeadzone",
                    "groups": "Gamepad",
                    "action": "MoveDirection",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "02986b1e-ffdf-4ee6-be4b-0fd4d901fd71",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "StickDeadzone",
                    "groups": "Gamepad",
                    "action": "LookDirection",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "055bf063-67ab-4a59-9851-e8c26afdbacd",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "SwitchPlacingMode",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "PlayerShooting",
            "id": "1df8e6e0-3bde-44f2-940b-3dd978abc25d",
            "actions": [
                {
                    "name": "Shoot",
                    "type": "Button",
                    "id": "12582d6a-ef65-4df1-bd16-e154ee3fcce1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "NextWeapon",
                    "type": "Button",
                    "id": "bc468056-a877-45ac-9c23-11182f62b52b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "1023d12c-2283-46ca-a361-673b083d3604",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "204668ae-c2b5-4c49-995d-b139fa5c3f42",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "NextWeapon",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "PlayerPlacing",
            "id": "d2d16597-c379-4913-8fb8-5864865db41b",
            "actions": [
                {
                    "name": "Buid",
                    "type": "Button",
                    "id": "09c40dab-6cdf-4ab0-a858-47d8655ffc1b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "NextTurret",
                    "type": "Button",
                    "id": "7ebe3ef9-a882-470d-bef2-9c53faef6868",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "aeb34afa-1d37-456f-8098-dcb9dadbd46a",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Buid",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8ecd5b8f-8f9e-48f2-934b-b8604b226910",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NextTurret",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Gamepad",
            "bindingGroup": "Gamepad",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}